Added Favorite Activity and Adapter.

--- a/pocket-buddha/app/src/main/res/values/strings.xml
+++ b/pocket-buddha/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 	<string name="activity_about">About</string>
 
 	<string name="share_footer_text">
-		Shared from my Pocket Buddha App.
+		Shared from my Pocket Buddha App. #pocketbuddha
 	</string>
 
 	<!--Menu Item Labels-->
