--- a/pocket-buddha/app/src/main/res/values/strings.xml
+++ b/pocket-buddha/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 	<string name="activity_detail"></string>
 	<string name="activity_search_results">Search Results</string>
 	<string name="activity_about">About</string>
-    <string name="activity_credits">Credits</string>
+	<string name="activity_credits">Credits</string>
 
 	<string name="share_footer_text">
 		Shared from my Pocket Buddha App. #pocketbuddha
@@ -17,14 +17,14 @@
 
 	<string name="fab_label_share">Share It!</string>
 	<string name="fab_label_play">Play It!</string>
-    <string name="fab_label_title">Organize by Title</string>
-    <string name="fab_label_date">Organize by Date</string>
+	<string name="fab_label_title">Organize by Title</string>
+	<string name="fab_label_date">Organize by Date</string>
 
 	<string name="navigation_drawer_open">Open navigation drawer</string>
 	<string name="navigation_drawer_close">Close navigation drawer</string>
 
 	<string name="home_drawer_home">Home</string>
-    <string name="home_drawer_favorites">Favorites</string>
+	<string name="home_drawer_favorites">Favorites</string>
 	<string name="home_drawer_about">About</string>
 	<string name="home_drawer_credits">Credits</string>
 
@@ -32,8 +32,10 @@
 	<string name="msg_favorite_removed">Removed from Favorites.</string>
 	<string name="msg_db_error">Oops! Something went awry!</string>
 	<string name="msg_play_error">Unable to play file at this time.</string>
+	<string name="msg_select_items">Please select an item to display.</string>
+    <string name="msg_favorite_items_empty">Browse items and click on the star icon to save them to your favorites.</string>
 
-    <string name="content_home_description">Welcome to Pocket Buddha</string>
+	<string name="content_home_description">Welcome to Pocket Buddha</string>
 	<string name="content_image_description">Captivating Buddhist Image</string>
 	<string name="content_circle_description">Icon for the selected content</string>
 	<string name="content_action_delete">Icon for performing a delete action on this content</string>
